--- a/options.html
+++ b/options.html
@@ -737,6 +737,9 @@ function updatePredictedHitsCount() {
     <input type="text" name="base_signing_url" style="width: 300px;" validator="required,url" must_restart><br>
     <label for="base_oauth_signing_url">OAuth Signing URL:</label>
     <input type="text" name="base_oauth_signing_url" style="width: 300px;" validator="required,url" must_restart><br>
+
+    <label for="base_search_url">Search API URL:</label>
+    <input type="text" name="base_search_url" style="width: 300px;" validator="required,url" must_restart><br>
   </fieldset>
 
   <br>
